# github-actions-container-registry-test

./: Dockerfile  pyproject.toml
.github/workflows/: action.yml
