[tool.poetry]
name = "github-actions-container-registry-test"
version = "0.1.0"
description = ""
authors = ["mur6"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
pandas = "^1.1.5"
scipy = "^1.5.4"
bokeh = "^2.2.3"
numba = { version = "^0.52.0", python = "=3.8" }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
